# dotman-rs

./: .alacritty.yml  .dockerignore  .gitconfig  .gitignore  .p10k.zsh  .pre-commit-config.yaml  .tmux.conf  .zshrc  50-synaptics.conf  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  batconfig  codecov.yml  config.ron  config.toml  config_cache.toml  cunt-theme.zsh-theme  dotman-rs  gnome_saved_settings.dconf  setup-arch.sh  setup-linux.sh  setup-zsh-dependencies.sh  setup-zsh-dependencies.zsh  setup.sh  sync-dotfiles-rs
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  publish.yml.disabled  release.yml  security.yml
.nano/: search_history
.oh-my-zsh/cache/: .zsh-update  DEBS_avail
.oh-my-zsh/themes/: half-life.zsh-theme
benches/: commands_bench.rs  parser_bench.rs  storage_bench.rs
completions/: README.md  _dot  _dot-enhanced  dot-enhanced.bash  dot-enhanced.fish  dot.bash  dot.elv  dot.fish  dot.ps1
configs/: .alacritty.toml  .gitlint  .tmux.conf  .xinitrc  .zshrc  bashrc  clang-format  starship.toml  tmux.conf  tmuxconfig  zshrc
configs/alacritty/: alacritty.toml
configs/gtk-3.0/: settings.ini
configs/gtk-4.0/: gtk-dark.css  gtk.css.bak  theme-info.json
configs/gtk-themes/Catppuccin-Frappe-Standard-Teal-dark/: index.theme
configs/hypr/: exec-hyprland  hyprland.conf  hyprlock.conf  hyprshade.toml  monitors.conf  startup.conf
configs/hypr/conf/: animations.conf  environment.conf  keybinds.conf  monitors.conf  plugins.conf  settings.conf  startup.conf  windowrules.conf
configs/hypr/logs/: 2024-11-30_10-03-49_log.txt  2024-12-02_05-19-23_log.txt  2024-12-02_05-19-43_log.txt  2024-12-02_13-41-52_log.txt  2024-12-02_13-45-48_log.txt  2024-12-05_16-59-36_log.txt  2024-12-05_17-00-00_log.txt  2024-12-05_17-16-04_log.txt  (+13 more)
configs/i3/: i3-startup.sh  wallpaper-slideshow.sh
configs/i3wm/: config  i3-startup.sh  wallpaper-slideshow.sh
configs/kitty/: current-theme.conf  kitty.conf  kitty.conf.bak
configs/leftwm/: config.ron  down  up
configs/ly/: config.ini  save  save.ini
configs/neovim/: init.lua
configs/nvim/: .luacheckrc  .luarc.json  lazy-lock.json
configs/polybar/: config.ini  launch.sh  modules.ini  settings.ini
configs/rofi/: config.rasi
configs/sync-dotfiles/: config.ron
configs/wallpapers/: -list.txt  files-list.txt
configs/waybar/: config.jsonc  style.css  updates.sh
configs/x11/: xorg.conf  xorg.conf.backup  xorg.conf.nvidia-xconfig-original
configs/yazi/: yazi.toml
configs/zsh/: aliases.zsh  update-zsh-plugins
containers/: Dockerfile  Dockerfile.alpine
examples/: debug_index.rs
install/: install-windows.ps1  install.sh  one-liner.sh
man/: dot-add.1  dot-commit.1  dot-merge.1  dot-pull.1  dot-push.1  dot-status.1  dot.1
nvim/: coc-settings.json  init.lua  init.vim
nvim/plugin/: packer_compiled.lua
packaging/alpine/: APKBUILD
packaging/arch/: PKGBUILD  PKGBUILD-git  PKGBUILD.local
packaging/debian/: changelog  control  copyright  rules  watch
packaging/docker-test/: README.md  alpine.Dockerfile  arch.Dockerfile  build-all.sh  debian.Dockerfile  fedora.Dockerfile
packaging/gentoo/: dotman-0.0.1.ebuild  dotman-9999.ebuild
packaging/homebrew/: dotman.rb
packaging/nix/: default.nix  flake.nix
packaging/rpm/: dotman-simple.spec  dotman.spec
polybar/: config.ini  launch.sh  polywins.sh  powermenu
prebuilts/: btop-aarch64  btop-x86_64  dotman-rs
scripts/: build-all-targets.sh  cross-compile.sh  generate-completions.sh  generate-manpages.sh  install-completions.sh  setup-android-environment.sh  setup-env.sh  setup-git.sh  setup_env.sh  setup_git.sh  setup_nvim_lspservers.sh  setup_rust.sh  setup_shell.sh  utils.sh
src/: args.rs  cli.rs  config.rs  config_fmt.rs  conflicts.rs  dag.rs  errors.rs  file_manager.rs  hasher.rs  lib.rs  lock.rs  main.rs  mapping.rs  mirror.rs  rebase.rs  reflog.rs  refs.rs  sync.rs  test_utils.rs  transaction.rs  utils.rs
src/backup/: engine.rs  manager.rs  mod.rs
src/cli/: args.rs  commands.rs  mod.rs
src/commands/: add.rs  branch.rs  checkout.rs  clean.rs  commit.rs  config.rs  context.rs  diff.rs  fetch.rs  fsck.rs  import.rs  init.rs  log.rs  merge.rs  mod.rs  pull.rs  push.rs  rebase.rs  reflog.rs  remote.rs  remote_ops.rs  reset.rs  restore.rs  revert.rs  rm.rs  show.rs  stash.rs  status.rs  tag.rs
src/config/: config.rs  config_cache.rs  config_entry.rs  dotconfig_path.rs  entry.rs  migration.rs  mod.rs  parser.rs  profile.rs  validator.rs
src/core/: error.rs  mod.rs  traits.rs  types.rs
src/diff/: binary.rs  mod.rs  unified.rs
src/filesystem/: file_system.rs  handlers.rs  mod.rs  permissions.rs  symlink.rs
src/mirror/: errors.rs
src/output/: mod.rs  progress.rs
src/refs/: resolver.rs  updater.rs
src/restore/: engine.rs  manager.rs  mod.rs
src/scanner/: dir_trie.rs  mod.rs  untracked.rs
src/storage/: concurrent_index.rs  index.rs  mod.rs  snapshots.rs  stash.rs
src/tracking/: manifest.rs  mod.rs  scanner.rs
src/transaction/: manager.rs  mod.rs
src/utils/: commit.rs  compress.rs  formatters.rs  hash.rs  mod.rs  pager.rs  path.rs  paths.rs  permissions.rs  privileges.rs  serialization.rs  thread_pool.rs
tests/: branch_deletion_test.rs  command_tests.rs  commands_test.rs  comprehensive_test.rs  comprehensive_unit_tests.rs  concurrent_tests.rs  config_edge_cases.rs  edge_cases_test.rs  error_recovery_test.rs  hash_cache_test.rs  integration_basic.rs  integration_test.rs  integration_tests.rs  known_vulnerabilities_test.rs  lib_tests.rs  preserve_permissions_test.rs  property_based_tests.rs  property_tests.rs  rebase_tests.rs  reference_resolver_tests.rs  refs_tests.rs  remote_integration_tests.rs  remote_test.rs  remote_unit_tests.rs  security_tests.rs  stash_test.rs  storage_corruption_tests.rs  storage_layer_tests.rs  storage_tests.rs  unit_tests.rs  user_config_test.rs
tests/common/: mod.rs
wezterm/: wezterm.lua
xtask/: Cargo.toml
xtask/src/: main.rs
(+166 files in other folders)
