[package]
name = "dotman-rs"
version = "0.1.1"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "A robust dotfiles management system with comprehensive file type support"
categories = ["command-line-utilities"]
authors = ["Utsav Balar <utsavbalar1231@gmail.com>"]

[dependencies]
# Core async runtime
tokio = { version = "1.45", features = ["full"] }

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Command line interface
clap = { version = "4.5", features = ["derive"] }

# File system and permissions
walkdir = "2.5"
nix = { version = "0.30", features = ["fs", "user"] }

# Hashing and integrity
blake3 = "1.8"
sha2 = "0.10"

# Path expansion
shellexpand = "3.1"
dirs = "6.0"

# Parallel processing
rayon = "1.10"
futures = "0.3"

# Async trait support
async-trait = "0.1"

# JSON handling for metadata
serde_with = "3.13"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for transaction IDs
uuid = { version = "1.17", features = ["v4", "serde"] }

# Temporary file handling
tempfile = "3.20"

# Compression (optional)
flate2 = { version = "1.1", optional = true }
tar = { version = "0.4", optional = true }

# Encryption (optional)
ring = { version = "0.17", optional = true }

# Additional dependencies
glob = "0.3"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
mockall = "0.13"
proptest = "1.7"

[features]
default = ["compression"]
compression = ["flate2", "tar"]
encryption = ["ring"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
