[package]
name = "dotman"
version = "0.0.1-rc1"
edition = "2024"
authors = ["UtsavBalar1231"]
description = "Extremely fast dotfiles manager for Linux"
license = "MIT"
repository = "https://github.com/UtsavBalar/dotman"
keywords = ["dotfiles", "configuration", "manager", "cli"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
anyhow = "1.0"
# thiserror = "2.0"
dirs = "6.0"
walkdir = "2.5"
rayon = "1.10"
dashmap = "6.0"
memmap2 = "0.9"
bincode = { version = "2.0", features = ["serde"] }
zstd = "0.13"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
chrono = { version = "0.4", features = ["serde"] }
# indicatif = "0.18"
colored = "3.0"
once_cell = "1.19"
parking_lot = "0.12"
simdutf8 = "0.1"
# bytes = "1.5"
fs4 = "0.13"
tempfile = "3.10"
# sha2 = "0.10"
# base64 = "0.22"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
proptest = "1.4"
tempdir = "0.3"
assert_cmd = "2.0"
predicates = "3.1"
serial_test = "3.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
debug = false
overflow-checks = false

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[profile.bench]
inherits = "release"

[target.'cfg(target_arch = "x86_64")'.dependencies]
simd-json = "0.15"

[target.'cfg(target_arch = "aarch64")'.dependencies]
simd-json = "0.15"

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "commands_bench"
harness = false
