[package]
name = "dotman"
version = "0.0.1"
edition = "2024"
authors = ["Utsav Balar <utsavbalar1231@gmail.com>"]
description = "Blazingly fast dotfiles manager with git-like semantics"
# documentation = "https://docs.rs/dotman"
homepage = "https://github.com/UtsavBalar1231/dotman-rs"
repository = "https://github.com/UtsavBalar1231/dotman-rs"
license = "MIT"
readme = "README.md"
keywords = ["dotfiles", "configuration", "manager", "cli", "git"]
categories = ["command-line-utilities", "filesystem", "development-tools"]
include = [
    "src/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
]
exclude = [
    "target/",
    "examples/",
    ".github/",
    "packaging/",
    "containers/",
    "scripts/",
    "install/",
    "man/",
    "completions/",
    "dist/",
    "*.md",
    "!README.md",
]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
anyhow = "1.0"
# thiserror = "2.0"
dirs = "6.0"
walkdir = "2.5"
rayon = "1.11"
dashmap = "6.1"
memmap2 = "0.9"
bincode = { version = "2.0", features = ["serde"] }
zstd = "0.13"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
chrono = { version = "0.4", features = ["serde"] }
# indicatif = "0.18"
colored = "3.0"
once_cell = "1.21"
simdutf8 = "0.1"
# bytes = "1.5"
fs4 = "0.13"
tempfile = "3.23"
which = "8.0"
rand = "0.9"
libc = "0.2"
glob = "0.3.3"
humantime = "2.1"
# sha2 = "0.10"
# base64 = "0.22"

# Modern pager system dependencies
similar = "2.4"                      # Diff algorithm (Myers/Patience/Histogram)
shell-words = "1.1"                  # Shell-like command parsing
crossterm = "0.28"                   # Modern cross-platform terminal lib
command-group = "5.0"                # Process group management (prevents zombies)
content_inspector = "0.2"            # Fast binary/text file detection
tracing = "0.1"                      # Structured logging (zero-cost when disabled)
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
proptest = "1.8"
tempfile = "3.23"
assert_cmd = "2.0"
predicates = "3.1"
serial_test = "3.2"
filetime = "0.2"
rstest = "0.21"                      # Parametrized testing

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
debug = false
overflow-checks = false

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

# Production optimizations for different use cases
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"

[profile.dist-debug]
inherits = "dist"
debug = true
strip = "none"

[target.'cfg(target_arch = "x86_64")'.dependencies]
simd-json = "0.17"

[target.'cfg(target_arch = "aarch64")'.dependencies]
simd-json = "0.17"

# Binary configuration
[[bin]]
name = "dot"
path = "src/main.rs"

# Metadata for crates.io
[package.metadata]
# Release configuration
[package.metadata.release]
pre-release-replacements = [
    {file="README.md", search="dotman \\d+\\.\\d+\\.\\d+", replace="dotman {{version}}"},
    {file="packaging/arch/PKGBUILD", search="pkgver=\\d+\\.\\d+\\.\\d+", replace="pkgver={{version}}"},
    {file="packaging/rpm/dotman.spec", search="Version:\\s+\\d+\\.\\d+\\.\\d+", replace="Version:        {{version}}"},
    {file="packaging/homebrew/dotman.rb", search="version \"\\d+\\.\\d+\\.\\d+\"", replace="version \"{{version}}\""},
]
pre-release-commit-message = "chore: Release {{version}}"
tag-message = "Release {{version}}"
tag-prefix = "v"
publish = false  # We handle publishing through CI
push = false     # We handle pushing through CI

# Documentation configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Performance optimizations for specific targets
